testsuite/tests/typecheck/should_fail/T19615.stderr

T19615.hs:17:20: error:
    A levity-polymorphic type is not allowed here:
      Type: b
      Kind: TYPE r'
    In the type of expression: (f x)
